# Non-Profit-AgenticRag-LLamaIndex

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  main.py  pyproject.toml  requirements.txt
agent/: rag_agent.py  tools.py
config/: __init__.py  logging_config.py  settings.py
engines/: summary_engine.py  vector_engine.py
ingestion/: chunker.py  embedder.py  pdf_parser.py  pipeline.py
scripts/: ingest.py  query.py  test_chunker.py  test_embedder.py  test_parser.py  test_pipeline.py
